@@ -64,12 +64,18 @@ Bug fixes
 - Fix crash in restart using coupled RSM model from non-RSM computation
   (issue #252).
 
-Numerics:
+Numerics
+--------
 
 - Add choice of inexact (flexible) preconditioned congugate gradient.
   * When using multiple threads and multigrid preconditioning with a
     Gauss-Seidel smoother, this choice is set by default over the
     standard preconditioned congugate gradient.
+
+User changes
+------------
+
+- Allow short path 'salome' for hdf5, cgns, med in installation script.
 
 Release 5.1.4 (March 30 2018)
 =============================
